--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.2.1
   provider: ^6.0.0
+  dio: ^5.7.0
+  intl: ^0.19.0  
+  flutter_local_notifications: ^17.2.3
+  workmanager: ^0.5.2
+  shared_preferences: ^2.0.9
+
+
 
 
 dev_dependencies:
